--- a/package.json
+++ b/package.json
@@ -6,8 +6,19 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "aos": "^2.3.4",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.2.3",
+    "highcharts": "^11.0.1",
+    "highcharts-border-radius": "^0.0.4",
+    "highcharts-react-official": "^3.2.0",
+    "js-cookie": "^3.0.5",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.0"
   },
