--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
