--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "highcharts-border-radius": "^0.0.4",
     "highcharts-react-official": "^3.2.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
