--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "highcharts": "^11.0.1",
     "highcharts-border-radius": "^0.0.4",
     "highcharts-react-official": "^3.2.0",
+    "jquery": "^3.7.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "mobile-device-detect": "^0.4.3",
     "moment": "^2.29.4",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
@@ -22,7 +24,10 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "sass": "^1.62.1",
+    "scss": "^0.2.4",
     "socket.io-client": "^4.6.1",
+    "tailwindcss": "^3.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
