--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "aos": "^2.3.4",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "highcharts": "^11.0.1",
@@ -18,6 +19,7 @@
     "mobile-device-detect": "^0.4.3",
     "moment": "^2.29.4",
     "notistack": "^3.0.1",
+    "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
