--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
