--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "highcharts": "^11.0.1",
     "highcharts-border-radius": "^0.0.4",
     "highcharts-react-official": "^3.2.0",
+    "i18next": "^22.5.0",
     "jquery": "^3.7.0",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -23,6 +24,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.3.1",
     "react-outside-click-handler": "^1.3.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
