--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-outside-click-handler": "^1.3.0",
+    "react-responsive": "^9.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
