--- a/package.json
+++ b/package.json
@@ -25,15 +25,18 @@
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
+    "react-icons": "^4.10.1",
     "react-outside-click-handler": "^1.3.0",
     "react-responsive": "^9.0.2",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "sass": "^1.62.1",
     "scss": "^0.2.4",
     "socket.io-client": "^4.6.1",
     "tailwindcss": "^3.3.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
